# bfint

./: .gitignore  CMakeLists.txt  README.md  bfint.hpp  main.cpp
bf_sample/: helloworld.bf
include/bfint/: bfint.hpp
src/bfint/: bfint.cpp
src/main/: main.cpp
